# kaggle-auto-research

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROGRESS.md  README-EN.md  README.md  SECURITY.md  agents.md  kar  kar.cmd  pyproject.toml
.claude/skills/agentic-kaggle-competition/: .gitignore  LICENSE  README.md  SKILL.md
.claude/skills/competition-research/: SKILL.md
.claude/skills/eda-features/: SKILL.md
.claude/skills/iteration-loop/: SKILL.md
.claude/skills/kaggle/: SKILL.md
.claude/skills/kaggle-agent-exam/: README.md  SKILL.md
.claude/skills/local-dev/: SKILL.md  gen_token.py  pack.sh  store.py  unpack.sh
cli/: main.py
docs/: agent-tooling-roadmap.md  competition-watchlist.md
src/kaggle_auto/: __init__.py  config.py  workspace.py
templates/crypto/: config.yaml
templates/llm/: config.yaml
templates/tabular/: config.yaml
tests/: test_config.py  test_drw_next_submit_plan.py  test_rogii_baseline.py  test_rogii_formation_spatial.py  test_rogii_notebook.py  test_rogii_progress_simplex.py  test_rogii_residual_simplex.py  test_rogii_smoother.py  test_submission_budget.py  test_submission_validator.py
workspaces/ai-agent-security-multi-step-tool-attacks/: config.yaml
workspaces/autonomous-agent-prediction-beta/: config.yaml
workspaces/drw-crypto/: config.yaml
workspaces/ps-s6e5/: config.yaml
workspaces/rogii-wellbore-geology-prediction/: config.yaml  idea_pool.json  journal.json  requirements-beam.txt
workspaces/skill-lift/: config.yaml
workspaces/titanic/: config.yaml
(+232 files in other folders)
