[project]
name = "kaggle-auto-research"
version = "0.1.0"
description = "AI Agent powered Kaggle competition automation framework"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "optuna>=3.4",
    "kaggle>=1.6",
    "typer>=0.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "plotly>=5.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
deep = [
    "torch>=2.0",
    "transformers>=4.30",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
kar = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_auto", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
